# lintomatic

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  clean_test.py  comprehensive_test.py  issue_example.py  lintomatic  lintomatic-old  lintomatic.cabal  lintomatic.hi  lintomatic.hs  run_tests.sh  test_comprehensive_blocks.py  test_file.py  validate_lintomatic.sh
.github/: copilot-instructions.md
app/: Main.hs
examples/: test_indentation.py  test_long_docstrings.py
src/: lintomatic.hs
src/Lintomatic/: Core.hs
subdir/: nested_test.py
test/: TestSuite.hs  validate_lintomatic.sh
test/Tests/Property/: Core.hs
test/Tests/Unit/: Core.hs  FileDiscovery.hs  FixFunctions.hs
test_files/: sample.py
test_validation/: bad_indentation.py  block_statements.py
